--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 certifi==2024.2.2
 click==8.1.7
 dnspython==2.6.1
@@ -13,6 +15,7 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+lxml==5.2.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -30,6 +33,7 @@ selenium==4.21.0
 shellingham==1.5.4
 sniffio==1.3.1
 sortedcontainers==2.4.0
+soupsieve==2.5
 starlette==0.37.2
 trio==0.25.1
 trio-websocket==0.11.1
