--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 annotated-types==0.7.0
 anyio==4.4.0
-attrs==23.2.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.6.1
 email_validator==2.1.1
@@ -20,23 +20,18 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.3
-outcome==1.3.0.post0
 pydantic==2.7.2
 pydantic_core==2.18.3
 Pygments==2.18.0
-PySocks==1.7.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+requests==2.32.3
 rich==13.7.1
-selenium==4.21.0
 shellingham==1.5.4
 sniffio==1.3.1
-sortedcontainers==2.4.0
 soupsieve==2.5
 starlette==0.37.2
-trio==0.25.1
-trio-websocket==0.11.1
 typer==0.12.3
 typing_extensions==4.12.0
 ujson==5.10.0
@@ -45,4 +40,3 @@ uvicorn==0.30.0
 uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
-wsproto==1.2.0
