--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
 anyio==4.4.0
+async-timeout==4.0.3
+asyncpg==0.29.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
